--- a/new-frontend/translations/lt.json
+++ b/new-frontend/translations/lt.json
@@ -14,25 +14,27 @@
         "ha": "ha",
         "m": "m",
         "liters": "litrai",
-        "selectSeason": "Pasirinkite sezoną"
+        "selectSeason": "Pasirinkite sezoną",
+        "yourFarm": "jūsų ūkio",
+        "user": "Naudotojau"
     },
     "dashboard": {
-        "aiSummary": "AI Santrauka",
-        "generatingSummary": "Generuojama santrauka...",
-        "noSummaryAvailable": "Santrauka nepasiekiama.",
+        "aiSummary": "AI įžvalgos",
+        "generatingSummary": "Generuojamos įžvalgos...",
+        "noSummaryAvailable": "Įžvalgos nepasiekiamos.",
         "regenerateInsight": "Atnaujinti įžvalgą",
-        "taskCompletion": "Užduočių Atlikimas",
+        "taskCompletion": "Užduočių atlikimas",
         "completed": "Atlikta",
         "notDone": "Neatlikta",
-        "totalFieldArea": "Bendras Laukų Plotas",
-        "tasksTimeline": "Užduočių Laiko Juosta",
+        "totalFieldArea": "Bendras laukų plotas",
+        "tasksTimeline": "Užduočių laiko juosta",
         "task": "Užduotis",
         "status": "Būsena",
         "date": "Data",
         "due": "Terminas",
         "view": "Peržiūrėti",
         "loading": "Kraunami duomenys...",
-        "welcomeMessage": "Sveiki atvykę į jūsų ūkio valdymo skydelį",
+        "welcomeMessage": "Sveiki atvykę į {farmName} ūkį, {userName}!",
         "todayDate": "Šiandienos data",
         "totalFields": "Viso laukų",
         "fetchTasksError": "Nepavyko gauti užduočių.",
@@ -59,7 +61,7 @@
         "currentWeather": "Dabartiniai orai"
     },
     "roles": {
-        "title": "Rolės ir Leidimai",
+        "title": "Rolės ir leidimai",
         "selectRole": "Pasirinkite rolę",
         "noOtherRolesAvailable": "Nėra kitų rolių",
         "permissionsForRole": "Leidimai rolei",
@@ -67,9 +69,9 @@
         "member": "Narys",
         "updateRole": "Išsaugoti Rolę",
         "noPermission": "Jūs neturite teisės peržiūrėti rolių ir leidimų.",
-        "subtitle": "Tvarkyti naudotojų roles ir jų asocijuotas teises",
+        "subtitle": "Tvarkyti rolėms priskirtas teises",
         "roles": "Rolės",
-        "selectRoleDesc": "Pasirinkite rolę, kad peržiūrėtumėte ir redaguotumėte leidimus",
+        "selectRoleDesc": "Pasirinkite rolę, kad galėtumėte peržiūrėti ir redaguoti leidimus",
         "selectRolePrompt": "Pasirinkite rolę iš kairiojo skydelio",
         "permissionsAssigned": "leidimai",
         "searchPermissions": "Ieškoti leidimų...",
@@ -185,7 +187,7 @@
         "createSuccess": "Įranga sėkmingai sukurta",
         "createError": "Nepavyko sukurti įrangos",
         
-        "myEquipment": "Mano įranga",
+        "myEquipment": "Ūkio įranga",
         "searchPlaceholder": "Ieškoti pagal pavadinimą...",
         "filterByType": "Filtruoti pagal tipą",
         "createEquipment": "Sukurti įrangą",
@@ -229,21 +231,21 @@
         }
     },
     "fields": {
-        "title": "Sukurti Lauką",
-        "fieldName": "Lauko Pavadinimas",
+        "title": "Sukurti lauką",
+        "fieldName": "Lauko pavadinimas",
         "enterFieldName": "Įveskite lauko pavadinimą",
-        "selectCrop": "Pasirinkite Pasėlį",
+        "selectCrop": "Pasirinkite pasėlį",
         "selectCropType": "Pasirinkite pasėlį",
-        "drawBoundary": "Nubrėžkite Lauko Ribas",
+        "drawBoundary": "Nubrėžkite lauko ribas",
         "area": "Plotas",
         "perimeter": "Perimetras",
-        "createButton": "Sukurti Lauką",
+        "createButton": "Sukurti lauką",
         "noPermission": "Jūs neturite teisės peržiūrėti laukus.",
         "ha": "ha",
         "m": "m",
         "fieldLoadError": "Nepavyko įkelti lauko duomenų.",
         "fieldNotFound": "Laukas nerastas.",
-        "fieldLocation": "Lauko vieta",
+        "fieldLocation": "Lauko lokacija",
         "deleteField": "Ištrinti lauką",
         "deleteFieldConfirm": "Ar tikrai norite ištrinti šį lauką?",
         "deleteFieldSuccess": "Laukas sėkmingai ištrintas.",
@@ -251,7 +253,7 @@
         "myFields": "Mano Laukai",
         "searchPlaceholder": "Ieškoti laukų pagal pavadinimą",
         "fetchFieldsError": "Nepavyko gauti laukų duomenų.",
-        "moreInfo": "Daugiau informacijos",
+        "moreInfo": "Atidaryti",
         "viewOnMap": "Žiūrėti žemėlapyje",
         "allCrops": "Visi pasėliai",
         "filterByCrop": "Filtruoti pagal pasėlį",
@@ -276,7 +278,7 @@
         "openInGoogleMaps": "Atidaryti Google Maps",
         "lastUpdated": "Paskutinis atnaujinimas",
         "deleteFieldWarning": "Šio veiksmo nebus galima atšaukti. Visos su šiuo lauku susijusios užduotys liks sistemoje, bet nebebus susietos su lauku.",
-        "createTitle": "Sukurti Naują Lauką",
+        "createTitle": "Sukurti naują lauką",
         "drawInstructions": "Spustelėkite ant žemėlapio, kad nubrėžtumėte lauko ribas. Pažymėkite bent 3 taškus daugiakampiui sukurti, tada spustelėkite užbaigimo mygtuką.",
         "noPermissionCreate": "Jūs neturite teisės kurti laukus",
         "contactAdminForAccess": "Susisiekite su administratoriumi dėl prieigos",
@@ -285,7 +287,7 @@
         "fieldCreatedError": "Nepavyko sukurti lauko",
         "failedToLoadCropOptions": "Nepavyko įkelti pasėlių pasirinkimų",
         "failedToLoadExistingFields": "Nepavyko įkelti esamų laukų",
-        "backToFields": "Grįžti į Laukus"
+        "backToFields": "Grįžti į laukus"
     },
     "fieldsMap": {
         "title": "Laukų žemėlapis",
@@ -294,10 +296,10 @@
         "createNewField": "Kurti naują lauką",
         "myLocation": "Mano vieta",
         "locating": "Ieškoma vietos...",
-        "weatherOn": "Orai įjungti",
-        "weatherOff": "Orai išjungti",
+        "weatherOn": "Orų informacija įjungta",
+        "weatherOff": "Orai informacija išjungta",
         "fieldsDisplayed": "rodoma laukų",
-        "filteredFrom": "filtruota iš viso",
+        "filteredFrom": "filtruota iš ",
         "fieldInfo": "Lauko informacija",
         "fieldName": "Pavadinimas",
         "area": "Plotas",
@@ -370,9 +372,9 @@
         "loadEquipmentError": "Nepavyko įkelti prieinamos įrangos.",
         "fetchSeasonsError": "Nepavyko įkelti sezonų.",
         "viewTask": "Peržiūrėti užduotį",
-        "taskStatusPending": "Suplanuotos",
-        "taskStatusCompleted": "Užbaigtos",
-        "taskStatusCanceled": "Atšauktos",
+        "taskStatusPending": "Suplanuota",
+        "taskStatusCompleted": "Užbaigta",
+        "taskStatusCanceled": "Atšaukta",
         "all": "Visos",
         "tasks": "Užduotys",
         "pageTitle": "Užduočių valdymas",
@@ -383,8 +385,8 @@
         "taskActions": "Užduoties veiksmai",
         "total": "Iš viso",
         "completed": "Atlikta", 
-        "pending": "Laukiančios",
-        "canceled": "Atšauktos",
+        "pending": "Suplanuota",
+        "canceled": "Atšaukta",
         "noDescription": "Aprašymas nepateiktas",
         "loadingTask": "Įkeliama užduoties informacija...",
         "taskNotFound": "Užduotis nerasta",
@@ -479,29 +481,29 @@
         "loading": "Kraunama..."
     },
     "cropHealth": {
-        "title": "Pasėlių Sveikatos Diagnozė (AI)",
-        "subtitle": "Įkelkite augalo ar pasėlio nuotrauką ir gaukite dirbtinio intelekto pasiūlytą diagnozę.",
+        "title": "Pasėlių būklės analizė su DI",
+        "subtitle": "Įkelkite augalo (pasėlio) nuotrauką dirbtinio intelekto analizei gauti.",
         "uploadSection": "Įkelti nuotrauką",
-        "chooseCropImage": "Pasirinkite Pasėlio Nuotrauką",
+        "chooseCropImage": "Pasirinkite augalo nuotrauką",
         "acceptedFormats": "Priimami formatai: JPG, PNG, iki 10MB",
         "analyze": "Analizuoti",
         "preview": "Nuotraukos peržiūra",
-        "diagnosisReport": "Diagnozės Ataskaita",
-        "plantDetected": "Augalas Aptiktas",
-        "healthStatus": "Sveikatos Būklė",
-        "detectedDiseases": "Aptiktos Ligos",
+        "diagnosisReport": "Diagnozės ataskaita",
+        "plantDetected": "Augalas aptiktas",
+        "healthStatus": "Sveikatos būklė",
+        "detectedDiseases": "Aptiktos ligos",
         "disease": "Liga",
         "probability": "Tikimybė",
-        "similarImages": "Panašūs Vaizdai",
+        "similarImages": "Panašūs vaizdai",
         "action": "Veiksmas",
-        "createTask": "Sukurti Užduotį",
+        "createTask": "Sukurti užduotį",
         "selectField": "Pasirinkite lauką užduočiai",
         "confirm": "Patvirtinti",
         "generatingDescription": "Generuojamas užduoties aprašymas...",
         "yes": "Taip",
         "no": "Ne",
         "healthy": "Sveikas",
-        "unhealthy": "Nesveikas",
+        "unhealthy": "Pažeistas",
         "loading": "Kraunamas pasėlių sveikatos puslapis...",
         "analyzing": "Analizuojama jūsų pasėlio nuotrauka...",
         "noImageUploaded": "Dar neįkelta nuotrauka",
@@ -518,23 +520,23 @@
         "fetchFieldsError": "Nepavyko įkelti laukų",
         "fieldSelectionHelp": "Pasirinkite lauką, kuriame buvo aptikta ši liga:",
         "noFieldsAvailable": "Jūs dar neturite jokių laukų",
-        "createField": "Sukurti Lauką"
+        "createField": "Sukurti lauką"
     },
     "farmMembers": {
         "title": "Ūkio nariai",
         "inviteByEmail": "Pakviesti el. paštu",
         "name": "Vardas",
         "email": "El. paštas",
-        "role": "Vaidmuo",
+        "role": "Rolė",
         "remove": "Pašalinti",
         "selectRole": "Pasirinkti vaidmenį",
-        "unknownRole": "Nežinomas vaidmuo",
+        "unknownRole": "Nežinomas rolė",
         "confirmDeletion": "Patvirtinti šalinimą",
         "confirmDeleteBody": "Ar tikrai norite pašalinti šį narį?",
         "delete": "Ištrinti",
         "fetchMembersError": "Nepavyko įkelti narių.",
         "fetchRolesError": "Nepavyko įkelti vaidmenų.",
-        "updateRoleSuccess": "Vaidmuo sėkmingai atnaujintas!",
+        "updateRoleSuccess": "Rolė sėkmingai atnaujintas!",
         "updateRoleError": "Nepavyko atnaujinti vaidmens.",
         "removeSuccess": "Narys pašalintas!",
         "removeError": "Nepavyko pašalinti nario.",
@@ -583,7 +585,7 @@
         "fetchSeasonsError": "Nepavyko įkelti sezonų.",
         "fetchActivityError": "Nepavyko įkelti veiklos ataskaitos.",
         "noActivityData": "Šiam sezonui nerasta veiklos duomenų.",
-        "role": "Vaidmuo:",
+        "role": "Rolė:",
         "tasksParticipated": "Dalyvauta užduotyse:",
         "totalMinutesWorked": "Iš viso dirbta minučių:",
         "tasks": "Užduotys:",
@@ -601,7 +603,7 @@
         "overview": "Užduočių apžvalga",
         "totalTasks": "Iš viso užduočių:",
         "completed": "Atlikta:",
-        "pending": "Laukiančios:",
+        "pending": "Suplanuotos:",
         "canceled": "Atšauktos:",
         "avgCompletionTime": "Vidutinis atlikimo laikas:",
         "tasksByField": "Užduotys pagal lauką",
@@ -631,12 +633,12 @@
         "emailPlaceholder": "Įveskite el. pašto adresą",
         "emailRequired": "El. paštas yra privalomas",
         "emailInvalid": "Neteisingas el. pašto formatas",
-        "role": "Vaidmuo",
-        "selectRole": "Pasirinkite vaidmenį",
-        "roleRequired": "Vaidmuo yra privalomas",
-        "infoText": "Į šį el. pašto adresą bus išsiųstas kvietimas. Vartotojas turės susikurti paskyrą arba prisijungti, kad patvirtintų kvietimą.",
+        "role": "Rolė",
+        "selectRole": "Pasirinkite rolę",
+        "roleRequired": "Rolė yra privalomas",
+        "infoText": "Į šį el. pašto adresą bus išsiųstas kvietimas. Naudotojas turės susikurti paskyrą arba prisijungti, kad patvirtintų kvietimą.",
         "inviteSuccess": "Kvietimas sėkmingai išsiųstas!",
-        "alreadyMemberError": "Šis vartotojas jau yra šio ūkio narys",
+        "alreadyMemberError": "Šis naudotojas jau yra šio ūkio narys",
         "inviteError": "Nepavyko išsiųsti kvietimo",
         "fetchRolesError": "Nepavyko įkelti vaidmenų"
     },
@@ -757,11 +759,11 @@
         "errorOccurred": "Įvyko klaida"
     },
     "farm": {
-        "createFarmTitle": "Sukurkite Savo Ūkį",
+        "createFarmTitle": "Sukurkite savo ūkį",
         "startByNaming": "Pradėkite suteikdami ūkiui pavadinimą",
-        "farmName": "Ūkio Pavadinimas",
+        "farmName": "Ūkio pavadinimas",
         "enterFarmName": "Įveskite savo ūkio pavadinimą",
-        "createFarmButton": "Sukurti Ūkį",
+        "createFarmButton": "Sukurti ūkį",
         "creating": "Kuriama...",
         "emptyFarmName": "Įveskite ūkio pavadinimą",
         "farmCreated": "Ūkis sėkmingai sukurtas!",
@@ -790,7 +792,7 @@
     "menu": {
         "home": "Pradžia",
         "dashboard": "Valdymo skydelis",
-        "cropHealth": "Pasėlių sveikata",
+        "cropHealth": "Pasėlių analizė",
         "map": "Žemėlapis",
         "fields": "Laukai",
         "tasks": "Užduotys",
@@ -855,6 +857,7 @@
         "success": {
           "farmSwitched": "Ūkis sėkmingai perjungtas!",
           "loggedOut": "Sėkmingai atsijungta",
+          "loggedIn": "Sėkmingai prisijungta",
           "farmRenamed": "Ūkis pervadintas!",
           "farmDeleted": "Ūkis ištrintas!",
           "farmCreated": "Naujas ūkis sukurtas!",
